Se agrego semestre actual del estudiante

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p style="text-align: center;"><strong>MI PRIMERA PAGINA WEB</strong></p>
     <p style="text-align: left;"><strong>Nombre:</strong> Jose Felipe Amaya Castro</p>
+    <p style="text-align: left;"><strong>Semestre</strong>: 7timo</p>
 </body>
 </html>
 
