--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p style="text-align: center;"><strong>MI PRIMERA PAGINA WEB</strong></p>
     <p style="text-align: left;"><strong>Nombre:</strong> Jose Felipe Amaya Castro</p>
     <p style="text-align: left;"><strong>Semestre</strong>: 7timo</p>
+    <p style="text-align: left;"><strong>Deporte</strong> <strong>Favorito</strong>: Futbol</p>
+    
 </body>
 </html>
 
