Se agrego equipo Favorito

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p style="text-align: left;"><strong>Nombre:</strong> Jose Felipe Amaya Castro</p>
     <p style="text-align: left;"><strong>Semestre</strong>: 7timo</p>
     <p style="text-align: left;"><strong>Deporte</strong> <strong>Favorito</strong>: Futbol</p>
+    <p style="text-align: left;"><strong>Equipo</strong> <strong>Favorito</strong>: Millonarios</p>
     
 </body>
 </html>
