Se agrego descripción del  equipo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p style="text-align: left;"><strong>Semestre</strong>: 7timo</p>
     <p style="text-align: left;"><strong>Deporte</strong> <strong>Favorito</strong>: Futbol</p>
     <p style="text-align: left;"><strong>Equipo</strong> <strong>Favorito</strong>: Millonarios</p>
+    <p style="text-align: left;"><strong>Descripcion del quipo seleccionado:</strong> Es un&nbsp;club de f&uacute;tbol&nbsp;de la ciudad de&nbsp;Bogot&aacute;, capital de&nbsp;Colombia. Es uno de los clubes m&aacute;s laureados y emblem&aacute;ticos de Colombia, de all&iacute; que sea considerada una de las entidades deportivas m&aacute;s grandes del pa&iacute;s y una de las m&aacute;s importantes de&nbsp;Sudam&eacute;rica.</p>
     
 </body>
 </html>
