--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p style="text-align: left;"><strong>Deporte</strong> <strong>Favorito</strong>: Futbol</p>
     <p style="text-align: left;"><strong>Equipo</strong> <strong>Favorito</strong>: Millonarios</p>
     <p style="text-align: left;"><strong>Descripcion del quipo seleccionado:</strong> Es un&nbsp;club de f&uacute;tbol&nbsp;de la ciudad de&nbsp;Bogot&aacute;, capital de&nbsp;Colombia. Es uno de los clubes m&aacute;s laureados y emblem&aacute;ticos de Colombia, de all&iacute; que sea considerada una de las entidades deportivas m&aacute;s grandes del pa&iacute;s y una de las m&aacute;s importantes de&nbsp;Sudam&eacute;rica.</p>
+    <p style="text-align: left;"><strong>Jugadores:​</strong> Montero, Llinas, Macalister Silva, Daniel Ruiz, entre otros.</p>
     
 </body>
 </html>
